--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261566548371663%22%3A%22FksBrKtQ%22%2C%2261573611561768%22%3A%22zgmgyGST%22%7D",
+        "value": "%7B%2261566548371663%22%3A%22FksBrKtQ%22%2C%2261573611561768%22%3A%22dRIK1kcC%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-03-14T06:40:02.877Z",
-        "lastAccessed": "2025-03-14T06:40:02.877Z"
+        "creation": "2025-03-14T16:51:48.957Z",
+        "lastAccessed": "2025-03-14T16:51:48.957Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-14T06:40:02.877Z",
-        "lastAccessed": "2025-03-14T06:40:02.877Z"
+        "creation": "2025-03-14T16:51:48.957Z",
+        "lastAccessed": "2025-03-14T16:51:48.957Z"
     },
     {
         "key": "datr",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-14T06:40:02.877Z",
-        "lastAccessed": "2025-03-14T06:40:02.877Z"
+        "creation": "2025-03-14T16:51:48.957Z",
+        "lastAccessed": "2025-03-14T16:51:48.957Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-14T06:40:02.877Z",
-        "lastAccessed": "2025-03-14T06:40:02.877Z"
+        "creation": "2025-03-14T16:51:48.957Z",
+        "lastAccessed": "2025-03-14T16:51:48.957Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-14T06:40:02.877Z",
-        "lastAccessed": "2025-03-14T06:40:02.877Z"
+        "creation": "2025-03-14T16:51:48.957Z",
+        "lastAccessed": "2025-03-14T16:51:48.957Z"
     },
     {
         "key": "vpd",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-14T06:40:02.877Z",
-        "lastAccessed": "2025-03-14T06:40:02.877Z"
+        "creation": "2025-03-14T16:51:48.957Z",
+        "lastAccessed": "2025-03-14T16:51:48.957Z"
     },
     {
         "key": "dpr",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-14T06:40:02.877Z",
-        "lastAccessed": "2025-03-14T06:40:02.877Z"
+        "creation": "2025-03-14T16:51:48.957Z",
+        "lastAccessed": "2025-03-14T16:51:48.957Z"
     },
     {
         "key": "locale",
@@ -68,35 +68,17 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-14T06:40:02.877Z",
-        "lastAccessed": "2025-03-14T06:40:02.877Z"
+        "creation": "2025-03-14T16:51:48.957Z",
+        "lastAccessed": "2025-03-14T16:51:48.957Z"
     },
     {
-        "key": "c_user",
-        "value": "61573611561768",
+        "key": "m_pixel_ratio",
+        "value": "2.8125",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-14T06:40:02.877Z",
-        "lastAccessed": "2025-03-14T06:40:02.877Z"
-    },
-    {
-        "key": "fr",
-        "value": "0WfMYzzAwEi0BAJpG.AWVIKseCm-rq7BfOK_AtSIJW3rDmwPJwru4d4Q.Bn0eoo..AAA.0.0.Bn03v9.AWVKR6OuljQ",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-03-14T06:40:02.877Z",
-        "lastAccessed": "2025-03-14T06:40:02.877Z"
-    },
-    {
-        "key": "xs",
-        "value": "1%3At7mcP0itzKOHzA%3A2%3A1741913085%3A-1%3A-1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-03-14T06:40:02.877Z",
-        "lastAccessed": "2025-03-14T06:40:02.877Z"
+        "creation": "2025-03-14T16:51:48.957Z",
+        "lastAccessed": "2025-03-14T16:51:48.957Z"
     },
     {
         "key": "wd",
@@ -104,25 +86,52 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-14T06:40:02.877Z",
-        "lastAccessed": "2025-03-14T06:40:02.877Z"
+        "creation": "2025-03-14T16:51:48.957Z",
+        "lastAccessed": "2025-03-14T16:51:48.957Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61573611561768",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-03-14T16:51:48.957Z",
+        "lastAccessed": "2025-03-14T16:51:48.957Z"
+    },
+    {
+        "key": "fr",
+        "value": "0WfMYzzAwEi0BAJpG.AWWF60nZVaA5_tkAk6ngo8kMaJBcn6WD_yBRVQ.Bn0eoo..AAA.0.0.Bn1F6U.AWWeJF-0f4Q",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-03-14T16:51:48.957Z",
+        "lastAccessed": "2025-03-14T16:51:48.957Z"
+    },
+    {
+        "key": "xs",
+        "value": "38%3AXmerXIyXyeBEyw%3A2%3A1741971093%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-03-14T16:51:48.957Z",
+        "lastAccessed": "2025-03-14T16:51:48.957Z"
     },
     {
         "key": "fbl_st",
-        "value": "101028521%3BT%3A29032239",
+        "value": "101234368%3BT%3A29032851",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-14T06:40:02.877Z",
-        "lastAccessed": "2025-03-14T06:40:02.877Z"
+        "creation": "2025-03-14T16:51:48.957Z",
+        "lastAccessed": "2025-03-14T16:51:48.957Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2763%3Btimestamp%3A1741934358",
+        "value": "v2%3Bclient_version%3A2764%3Btimestamp%3A1741971100",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-14T06:40:02.877Z",
-        "lastAccessed": "2025-03-14T06:40:02.877Z"
+        "creation": "2025-03-14T16:51:48.957Z",
+        "lastAccessed": "2025-03-14T16:51:48.957Z"
     }
 ]
